--- a/.env.development
+++ b/.env.development
@@ -5,9 +5,9 @@ VITE_APP_WEBSITE_NAME='develop'
 VITE_APP_VIDGET_KEY=''
 
 # test api
-VITE_APP_API_HOST="https://api.step.testpromo.ru"
+VITE_APP_API_HOST=""
 
 # test url
-VITE_APP_HOST="https://api.step.testpromo.ru"
+VITE_APP_HOST=""
 
 # example import.meta.env.VITE_APP_API_HOST
