--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "@uidotdev/usehooks": "^2.4.1",
+    "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "formik": "^2.4.5",
     "normalize.css": "^8.0.1",
